# ProofSystem

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  zkLLVM
cmake/: CommonBuildParameters.cmake  CompilationFlags.cmake  functions.cmake
include/: AESEncryption.hpp  BitCoinKeyGenerator.hpp  BitcoinKeyGenerator.hpp  BitcoinKeyPairParams.hpp  Crypto3Util.hpp  ECDHEncryption.hpp  ECDSAPublicKey.hpp  ECDSATypes.hpp  ECElGamalKeyGenerator.hpp  ECElGamalTypes.hpp  ElGamalKeyGenerator.hpp  ElGamalTypes.hpp  Encryption.hpp  EthereumKeyGenerator.hpp  EthereumKeyPairParams.hpp  KDFGenerator.hpp  PallasMapper.hpp  PrimeNumbers.hpp  ext_private_key.hpp  library.h  util.hpp
include/ProofSystem/: AESEncryption.hpp  BitcoinKeyGenerator.hpp  BitcoinKeyPairParams.hpp  Crypto3Util.hpp  ECDHEncryption.hpp  ECDSAPublicKey.hpp  ECDSATypes.hpp  ECElGamalKeyGenerator.hpp  ECElGamalTypes.hpp  ElGamalKeyGenerator.hpp  ElGamalTypes.hpp  Encryption.hpp  EthereumKeyGenerator.hpp  EthereumKeyPairParams.hpp  KDFGenerator.hpp  PrimeNumbers.hpp  ext_private_key.hpp  util.hpp
src/: BitCoinKeyGenerator.cpp  BitcoinKeyGenerator.cpp  CMakeLists.txt  ElGamalKeyGenerator.cpp  EthereumKeyGenerator.cpp  PrimeNumbers.cpp
test/: BitcoinKeyGenerator_test.cpp  CMakeLists.txt  ECElGamalKeyGenerator_test.cpp  ElGamalKeyGenerator_test.cpp  EthereumKeyGenerator_test.cpp  KDFGenerator_test.cpp  MPCVerifierCircuit_test.cpp  PallasMapper_test.cpp  Requestor.cpp  Requestor.hpp  TransactionVerifierCircuit_test.cpp  main_test.cpp
